--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,3 +9,54 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+
+.audio {
+    background-color: rgb(26, 26, 26);
+    color: white;
+    text-align: left;
+    height: 1000vh;
+    overflow-y: scroll;
+
+    display: flex;
+    box-sizing: border-box;
+    border: 1px solid #000;
+}
+
+.botones {
+    display: flex;
+    background-color: rgb(37, 37, 37);
+    justify-content: space-around;
+    width: 80%;
+}
+
+.list-container {
+    max-height: 400px;
+    overflow-y: auto;
+    margin-bottom: 10px;
+    scroll-padding-top: 20px;
+    width: 80%;
+    background-color: rosybrown;
+
+}
+
+
+.list-group-item:hover {
+    background-color: #f0f0f0;
+    cursor: pointer;
+}
+
+
+.list-group-item.active {
+    background-color: #393838;
+    color: white;
+}
+
+.resizable-container {
+    resize: both;
+    overflow: auto;
+    min-width: 200px;
+    max-height: 600px;
+    min-height: 200px;
+    border: 1px solid #ccc;
+}
